Add @enablePreview