@@ -1,7 +1,8 @@
 /*
  * @test /nodynamiccopyright/
  * @summary
- * @compile --enable-preview -source ${jdk.version} -XDfind=all ForEachTestAllAnalyzers.java
+ * @enablePreview
+ * @compile -XDfind=all ForEachTestAllAnalyzers.java
  */
 public class ForEachTestAllAnalyzers {
     private void test(Iterable<? extends R> l) {
